Adding live chat and styling

--- a/public/stylesheets/cube.css
+++ b/public/stylesheets/cube.css
@@ -110,8 +110,8 @@ body {
 #wrapper {
   width: 700px;
   height: 700px;
-  margin: 20px auto;
-  border: 1px solid #09ABDA;
+  margin: 20px;
+  border: 1px solid transparent;
   position: relative;
 }
 #wrapper #flipRight,
@@ -154,6 +154,27 @@ body {
 #wrapper #flipDown {
   left: 325px;
   bottom: 0;
+}
+#chat-window {
+  position: absolute;
+  top: 140px;
+  right: 60px;
+  color: white;
+}
+#chat-window .user-list {
+  float: left;
+  width: 100px;
+  border-right: 1px solid white;
+  height: 300px;
+  padding: 10px;
+  overflow: scroll-y;
+}
+#chat-window .chat {
+  float: left;
+  width: 300px;
+  height: 250px;
+  overflow: scroll-y;
+  padding: 10px;
 }
 #threeDspace {
   width: 510px;
