--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,11 +4,12 @@
         <title>LexiCube</title>
         <link rel="shortcut icon" type="image/ico" href="favicon.ico" />
         <link rel="stylesheet" href="stylesheets/cube.css" />
+        <link rel="stylesheet" href="stylesheets/style.css" />
     </head>
     <body>
         <div class="topBar">
           <img id="lexiLogo" src="images/logo.png" />
-          <iframe id="nodeVote" src="http://nodeknockout.com/iframe/breakfast-club" frameborder="0" scrolling="no" allowtransparency="true" width="115" height="25"></iframe>
+          <!--<iframe id="nodeVote" src="http://nodeknockout.com/iframe/breakfast-club" frameborder="0" scrolling="no" allowtransparency="true" width="115" height="25"></iframe>-->
         </div>
         
         <div id="wrapper">
@@ -38,22 +39,63 @@
               <button class="show-bottom">Show Bottom (6)</button>
             </section>
         </div>
+
+        <div id="chat-window">
+	        <div class="user-list">
+				<b>Users</b>
+				<div id="users"></div>
+			</div>
+			<div class="chat">
+				<div id="conversation"></div>
+				<input id="data" style="width:200px;" />
+				<input type="button" id="datasend" value="send" />
+			</div>
+        </div>
+
         <script src="http://code.jquery.com/jquery.min.js"></script>
         <script src="scripts/cube.js"></script>
         <script src="http://localhost:3001/socket.io/socket.io.js"></script>
-        <script>
-          var socket = io.connect('http://localhost:3001');
-          socket.on('connect', function () {
-            socket.emit('set nickname', prompt('What is your nickname?'));
+       	<script>
+			var socket = io.connect('http://localhost:3001');
 
-            socket.on('user connected', function () {
-              console.log('Someone else connected!');
-            });
+			// on connection to server, ask for user's name with an anonymous callback
+			socket.on('connect', function(){
+				// call the server-side function 'adduser' and send one parameter (value of prompt)
+				socket.emit('adduser', prompt("What's your name?"));
+			});
 
-            socket.on('ready', function () {
-              console.log('Connected !');
-            });
-          });
-        </script>
+			// listener, whenever the server emits 'updatechat', this updates the chat body
+			socket.on('updatechat', function (username, data) {
+				$('#conversation').append('<b>'+username + ':</b> ' + data + '<br>');
+			});
+
+			// listener, whenever the server emits 'updateusers', this updates the username list
+			socket.on('updateusers', function(data) {
+				$('#users').empty();
+				$.each(data, function(key, value) {
+					$('#users').append('<div>' + key + '</div>');
+				});
+			});
+
+			// on load of page
+			$(function(){
+				// when the client clicks SEND
+				$('#datasend').click( function() {
+					var message = $('#data').val();
+					$('#data').val('');
+					// tell server to execute 'sendchat' and send along one parameter
+					socket.emit('sendchat', message);
+				});
+
+				// when the client hits ENTER on their keyboard
+				$('#data').keypress(function(e) {
+					if(e.which == 13) {
+						$(this).blur();
+						$('#datasend').focus().click();
+					}
+				});
+			});
+
+		</script>
     </body>
 </html>
