--- a/public/stylesheets/cube.less
+++ b/public/stylesheets/cube.less
@@ -169,6 +169,7 @@ body {
 			text-align:center;
 			text-transform:uppercase;
 			&.black {background-color:black;}
+			&.selected {border-color: #44a;}
 		}
 	}
 }
