--- a/public/stylesheets/cube.css
+++ b/public/stylesheets/cube.css
@@ -229,7 +229,7 @@ body {
   background-color: black;
 }
 #cube .face .square.selected {
-  border-color: #4444aa;
+  background-color: #bbe;
 }
 #show-buttons {
   margin-top: 120px;
