--- a/public/stylesheets/cube.css
+++ b/public/stylesheets/cube.css
@@ -90,10 +90,15 @@
   transform: translateZ(-255px) rotateX(90deg);
 }
 body {
-  background-color: #09ABDA;
-  box-sizing: border-box;
+  background: url(../images/bg.png) #09abda;
   margin: 0;
-  padding: 0;
+  padding: 25px;
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+}
+* {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 .topBar {
   width: 100%;
@@ -157,24 +162,36 @@ body {
 }
 #chat-window {
   position: absolute;
-  top: 140px;
+  top: 136px;
   right: 60px;
-  color: white;
+  color: black;
+  background-color: white;
+  height: 510px;
+  border: 2px solid black;
+  width: 400px;
 }
 #chat-window .user-list {
   float: left;
-  width: 100px;
-  border-right: 1px solid white;
-  height: 300px;
+  width: 25%;
+  border-right: 2px solid black;
   padding: 10px;
   overflow: scroll-y;
+  height: 455px;
 }
 #chat-window .chat {
   float: left;
-  width: 300px;
-  height: 250px;
+  width: 75%;
   overflow: scroll-y;
+  height: 455px;
   padding: 10px;
+}
+#chat-window #input {
+  float: left;
+  width: 100%;
+  border-top: 2px solid black;
+  overflow: none;
+  padding: 10px;
+  clear: left;
 }
 #threeDspace {
   width: 510px;
@@ -204,8 +221,8 @@ body {
   transition: transform 1.2s;
 }
 #cube .face {
-  width: 510px;
-  height: 510px;
+  width: 512px;
+  height: 512px;
   display: block;
   position: absolute;
   border: 1px solid black;
@@ -215,8 +232,8 @@ body {
   text-shadow: none;
 }
 #cube .face .square {
-  width: 32px;
-  height: 32px;
+  width: 34px;
+  height: 34px;
   border: 1px solid black;
   float: left;
   overflow: hidden;
