--- a/public/stylesheets/cube.less
+++ b/public/stylesheets/cube.less
@@ -98,6 +98,13 @@ body {
 	}
 }
 
+#clue {
+	background-color:white;
+	color:black;
+	border:2px solid black;
+	height:34px;
+}
+
 #chat-window {
 	position: absolute;
 	top: 136px;
@@ -175,6 +182,7 @@ body {
 		text-shadow:none;
 
 		.square {
+			position:relative;
 			width: 34px;
 			height: 34px;
 			border: 1px solid black;
@@ -186,6 +194,13 @@ body {
 			text-transform:uppercase;
 			&.black {background-color:black;}
 			&.selected {background-color:#bbe;}
+
+			.clueNum {
+				position: absolute;
+				top:-8px;
+				left:2px;
+				font-size:9px;
+			}
 		}
 	}
 }
