--- a/views/index.ejs
+++ b/views/index.ejs
@@ -99,6 +99,17 @@
 				}
 			});
 
+			function getClue(clues, num){
+				console.log(num);
+				for (var i in clues){
+					var n = parseInt(clues[i].split('.')[0]);
+					console.log(clues[i]);
+					if (n == num){
+						return clues[i];
+					}
+				}
+			}
+
 			function getWord(square, direction){
 				if ($(square).hasClass('black')){
 					return null;
@@ -131,7 +142,7 @@
 							index+=15;
 						}
 					}
-					word.clue = data.down[data.gridnums[start]];
+					word.clue = getClue(data.down, data.gridnums[start]);
 				}else {
 					var place = index % 15;
 					var min = index - place;
@@ -152,7 +163,7 @@
 							index++;
 						}
 					}
-					word.clue = data.across[data.gridnums[start]];
+					word.clue = getClue(data.across, data.gridnums[start]);
 				}
 				console.log(word);
 				return word;
