--- a/public/stylesheets/cube.less
+++ b/public/stylesheets/cube.less
@@ -62,11 +62,23 @@ body {
 }
 
 #wrapper {
-	width: 700px;
+	width: 1000px;
 	height:700px;
-	margin: 20px;
-	border:1px solid transparent;
+	margin: 20px auto;
 	position:relative;
+
+	#threeDspace {
+		width: 510px;
+		height: 510px;
+		position: absolute;
+		top:65px;
+		left:60px;
+		float:left;
+		-webkit-perspective: 1000px;
+		-moz-perspective: 1000px;
+		-o-perspective: 1000px;
+		perspective: 1000px;
+	}
 
 	#flipRight, #flipLeft, #flipUp, #flipDown {
 		position:absolute;
@@ -81,55 +93,63 @@ body {
 		}
 	}
 	#flipRight {
-		right:0;
-		top:325px;
+		left: 590px;
+		top:290px;
 	}
 	#flipLeft {
 		left:0;
-		top:325px;
+		top:290px;
 	}
 	#flipUp {
-		left:325px;
+		left:290px;
 		top:0;
 	}
 	#flipDown {
-		left:325px;
-		bottom:0;
+		left:290px;
+		top: 590px;
 	}
 }
 
 #clue {
+	position:absolute;
+	bottom:0;
+	left:0;
+	float:left;
+	width:640px;
 	background-color:white;
 	color:black;
 	border:2px solid black;
+	font-size:16px;
+	line-height:2em;
+	padding-left:12px;
 	height:34px;
 }
 
 #chat-window {
 	position: absolute;
-	top: 136px;
-	right: 60px;
+	top: 0;
+	right: 0;
 	color: black;
 	background-color:white;
-	height:510px;
+	height:700px;
 	border: 2px solid black;
-	width:400px;
+	width:320px;
 
 	.user-list {
 		float:left;
-		width:25%;
-		border-right:2px solid black;
+		width:100%;
+		border-bottom:2px solid black;
 		padding:10px;
 		overflow-y:auto;
 		overflow-x:hidden;
-		height:455px;
+		height:140px;
 	}
 	#conversation {
 		float:left;
-		width:75%;
+		width:100%;
 		overflow-y:auto;
 		overflow-x:hidden;
-		height:455px;
+		height:510px;
 		padding:10px;
 	}
 	#input {
@@ -140,17 +160,6 @@ body {
 		padding:10px;
 		clear:left;
 	}
-}
-
-#threeDspace {
-  width: 510px;
-  height: 510px;
-  position: relative;
-  margin: 90px auto;
-  -webkit-perspective: 1000px;
-  -moz-perspective: 1000px;
-  -o-perspective: 1000px;
-  perspective: 1000px;
 }
 
 #cube {
@@ -206,6 +215,7 @@ body {
 }
 
 #show-buttons {
+	display:none;
 	margin-top:120px;
 	clear:left;
 }
