--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,10 +13,10 @@
         
         <div id="wrapper">
         
-          <div id="flipRight" class="foundicon-right-arrow"></div>
-          <div id="flipLeft" class="foundicon-left-arrow"></div>
-          <div id="flipUp" class="foundicon-up-arrow"></div>
-          <div id="flipDown" class="foundicon-down-arrow"></div>
+			<div id="flipRight" class="foundicon-right-arrow"></div>
+			<div id="flipLeft" class="foundicon-left-arrow"></div>
+			<div id="flipUp" class="foundicon-up-arrow"></div>
+			<div id="flipDown" class="foundicon-down-arrow"></div>
         
             <section id="threeDspace">
                 <div id="cube">
@@ -40,18 +40,19 @@
               <button class="show-top">Show Top (5)</button>
               <button class="show-bottom">Show Bottom (6)</button>
             </section>
-        </div>
+        
 
         <div id="chat-window">
 	        <div class="user-list">
-				<b>Users</b>
+				<b>Online Players</b>
 				<div id="users"></div>
 			</div>
 			<div id="conversation"></div>
 			<div id="input">
-				<input id="data" style="width:300px;" />
-				<input type="button" id="datasend" value="send" />
+				<input id="data" style="width:220px;" />
+				<input type="button" id="datasend" value="Send" />
 				</div>
+        </div>
         </div>
 
         <script src="http://code.jquery.com/jquery.min.js"></script>
