--- a/public/stylesheets/cube.less
+++ b/public/stylesheets/cube.less
@@ -67,6 +67,20 @@ body {
 	margin: 20px auto;
 	position:relative;
 
+	#faceInfo {
+		position:absolute;
+		top:0;
+		left:0;
+		background-color:white;
+		width:200px;
+		color:black;
+		border:2px solid black;
+		font-size:16px;
+		line-height:2em;
+		padding-left:12px;
+		height:34px;
+	}
+
 	#threeDspace {
 		width: 510px;
 		height: 510px;
