--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,9 @@
           <iframe id="nodeVote" src="http://nodeknockout.com/iframe/breakfast-club" frameborder="0" scrolling="no" allowtransparency="true" width="115" height="25"></iframe>
         </div>
         
-        <div id="wrapper">
+      <div id="wrapper">
+      
+      <div id="faceInfo"></div>
         
 			<div id="flipRight" class="foundicon-right-arrow"></div>
 			<div id="flipLeft" class="foundicon-left-arrow"></div>
