--- a/public/stylesheets/cube.css
+++ b/public/stylesheets/cube.css
@@ -89,6 +89,13 @@
   -o-transform: translateZ(-255px) rotateX(90deg);
   transform: translateZ(-255px) rotateX(90deg);
 }
+.unselectable {
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
 body {
   background: url(../images/bg.png) #09abda;
   margin: 0;
@@ -157,7 +164,8 @@ body {
   font-size: 3em;
   text-shadow: 2px 2px #000;
   color: #FFF;
-  transition: all 0.5s;
+  -webkit-transition: color 0.5s;
+  transition: color 0.5s;
 }
 #wrapper #flipRight:hover,
 #wrapper #flipLeft:hover,
@@ -171,7 +179,7 @@ body {
 #wrapper #flipLeft:active,
 #wrapper #flipUp:active,
 #wrapper #flipDown:active {
-  color: #AAA;
+  color: #bbe;
 }
 #wrapper #flipRight {
   left: 590px;
@@ -261,7 +269,7 @@ body {
   display: block;
   position: absolute;
   border: 1px solid black;
-  background-color: white;
+  background-color: black;
   font-size: 6em;
   color: #000;
   text-shadow: none;
@@ -271,12 +279,19 @@ body {
   width: 34px;
   height: 34px;
   border: 1px solid black;
+  background-color: white;
   float: left;
   overflow: hidden;
   font-size: 32px;
   line-height: 1em;
   text-align: center;
   text-transform: uppercase;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  cursor: pointer;
 }
 #cube .face .square.black {
   background-color: black;
