--- a/public/stylesheets/cube.less
+++ b/public/stylesheets/cube.less
@@ -39,6 +39,16 @@
 #cube.show-top   { .rotate(rotateX(-90deg)); }
 #cube.show-bottom{ .rotate(rotateX(90deg)); }
 
+
+
+.unselectable {
+   -moz-user-select: none;
+   -khtml-user-select: none;
+   -webkit-user-select: none;
+   -ms-user-select: none;
+   user-select: none;
+}
+
 //BODY STYLES
 body {
 	background: url(../images/bg.png) #09ABDA;
@@ -106,10 +116,11 @@ body {
 		font-size:3em;
 		text-shadow:2px 2px #000;
 		color:#FFF;
-		transition: all 0.5s;
+		-webkit-transition: color 0.5s;
+		transition: color 0.5s;
 
 		&:hover,&:focus,&:active {
-			color: #AAA;
+			color: #bbe;
 		}
 	}
 	#flipRight {
@@ -205,7 +216,7 @@ body {
 		display: block;
 		position: absolute;
 		border: 1px solid black;
-		background-color: white;
+		background-color: black;
 		font-size:6em;	
 		color:#000;
 		text-shadow:none;
@@ -215,6 +226,7 @@ body {
 			width: 34px;
 			height: 34px;
 			border: 1px solid black;
+			background-color:white;
 			float:left;
 			overflow:hidden;
 			font-size:32px;
@@ -222,7 +234,9 @@ body {
 			text-align:center;
 			text-transform:uppercase;
 			&.black {background-color:black;}
-			&.selected {background-color:#bbe;}
+			&.selected {background-color:#bbe; }
+			.unselectable;
+			cursor:pointer;
 
 			.clueNum {
 				position: absolute;
