correct words are green and locked, backspace works, chat no longer types on cube

--- a/public/stylesheets/cube.css
+++ b/public/stylesheets/cube.css
@@ -305,6 +305,9 @@ body {
   left: 2px;
   font-size: 9px;
 }
+#cube .face .square .correctWord {
+  color: green;
+}
 #show-buttons {
   display: none;
   margin-top: 120px;
