--- a/public/stylesheets/cube.less
+++ b/public/stylesheets/cube.less
@@ -235,6 +235,7 @@ body {
 			text-transform:uppercase;
 			&.black {background-color:black;}
 			&.selected {background-color:#bbe; }
+
 			.unselectable;
 			cursor:pointer;
 
@@ -244,6 +245,8 @@ body {
 				left:2px;
 				font-size:9px;
 			}
+
+			.correctWord {color: green;}
 		}
 	}
 }
