removed fake click

--- a/public/stylesheets/cube.css
+++ b/public/stylesheets/cube.css
@@ -308,6 +308,9 @@ body {
 #cube .face .square .correctWord {
   color: green;
 }
+#cube .face .square .incorrectWord {
+  color: red;
+}
 #show-buttons {
   display: none;
   margin-top: 120px;
