--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,6 +60,7 @@
         <script src="http://code.jquery.com/jquery.min.js"></script>
         <script src="scripts/cube.js"></script>
         <script src="/socket.io/socket.io.js"></script>
+        <script src="/jquery.raptorize.1.0.js"></script>
        	<script src="scripts/main.js"></script>
     </body>
 </html>
