removed Lucida font

--- a/public/stylesheets/cube.less
+++ b/public/stylesheets/cube.less
@@ -54,7 +54,7 @@ body {
 	background: url(../images/bg.png) #09ABDA;
 	margin:0;
 	padding:25px;
-	font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+	font: 14px Helvetica, Arial, sans-serif;
 	min-width:1280px;
 }
 
@@ -64,10 +64,13 @@ body {
 	width:100%;
 	padding-left:1em;
 }
-#lexiLogo, #nodeVote {
+#lexiLogo {
 	float:left;
+	margin-left:8px;
 }
+
 #nodeVote {
+	float:left;
 	clear:left;
 	margin-top:12px;
 }
