--- a/public/stylesheets/cube.css
+++ b/public/stylesheets/cube.css
@@ -100,7 +100,7 @@ body {
   background: url(../images/bg.png) #09abda;
   margin: 0;
   padding: 25px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font: 14px Helvetica, Arial, sans-serif;
   min-width: 1280px;
 }
 * {
@@ -112,11 +112,12 @@ body {
   width: 100%;
   padding-left: 1em;
 }
-#lexiLogo,
-#nodeVote {
+#lexiLogo {
   float: left;
+  margin-left: 8px;
 }
 #nodeVote {
+  float: left;
   clear: left;
   margin-top: 12px;
 }
