Made chat use username instead of prompt.
Added logout button.

--- a/public/stylesheets/cube.css
+++ b/public/stylesheets/cube.css
@@ -121,6 +121,11 @@ body {
   clear: left;
   margin-top: 12px;
 }
+#logout {
+  position: absolute;
+  top: 15px;
+  right: 60px;
+}
 #wrapper {
   width: 1000px;
   height: 700px;
