--- a/public/stylesheets/cube.less
+++ b/public/stylesheets/cube.less
@@ -75,6 +75,12 @@ body {
 	margin-top:12px;
 }
 
+#logout {
+	position: absolute;
+	top:15px;
+	right: 60px;
+}
+
 #wrapper {
 	width: 1000px;
 	height:700px;
