--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="stylesheets/cube.css" />
     </head>
     <body>
+        <a id="logout" href="/logout">Logout</a>
         <div class="topBar">
           <img id="lexiLogo" src="images/logo.png" />
           <iframe id="nodeVote" src="http://nodeknockout.com/iframe/breakfast-club" frameborder="0" scrolling="no" allowtransparency="true" width="115" height="25"></iframe>
@@ -62,5 +63,8 @@
         <script src="/socket.io/socket.io.js"></script>
         <script src="/jquery.raptorize.1.0.js"></script>
        	<script src="scripts/main.js"></script>
+       <% if (user) { %>
+        <script>var username = "<%= user.username %>";</script>
+      <% } %>
     </body>
 </html>
