Adding scores to users.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -65,6 +65,7 @@
        	<script src="scripts/main.js"></script>
        <% if (user) { %>
         <script>var username = "<%= user.username %>";</script>
+        <script>var userID = "<%= user.id %>";</script>
       <% } %>
     </body>
 </html>
