Redid intro/login page

--- a/public/stylesheets/cube.less
+++ b/public/stylesheets/cube.less
@@ -81,6 +81,23 @@ body {
 	right: 60px;
 }
 
+.introInstructions {
+	float:left;
+	background-color:white;
+	border:2px solid black;
+	padding: 40px;
+	width:400px;
+	margin-top:26px;
+
+	h1 {padding:0; margin:0;}
+	.correctWord {color: green; font-weight:bold;}
+}
+
+.introCube {
+	float:left;
+	margin-right :60px;
+}
+
 #wrapper {
 	width: 1000px;
 	height:700px;
