--- a/public/stylesheets/cube.css
+++ b/public/stylesheets/cube.css
@@ -126,6 +126,26 @@ body {
   top: 15px;
   right: 60px;
 }
+.introInstructions {
+  float: left;
+  background-color: white;
+  border: 2px solid black;
+  padding: 40px;
+  width: 400px;
+  margin-top: 26px;
+}
+.introInstructions h1 {
+  padding: 0;
+  margin: 0;
+}
+.introInstructions .correctWord {
+  color: green;
+  font-weight: bold;
+}
+.introCube {
+  float: left;
+  margin-right: 60px;
+}
 #wrapper {
   width: 1000px;
   height: 700px;
