--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,39 +11,25 @@
           <iframe id="nodeVote" src="http://nodeknockout.com/iframe/breakfast-club" frameborder="0" scrolling="no" allowtransparency="true" width="115" height="25"></iframe>
         </div>
         <div id="wrapper">
-            <% if (message) { %>
-                <p><%= message %></p>
-            <% } %>
-            <div class="pull-right">
-                <form action="/login" method="post">
-                    <h2>Login</h2>
-                    <div>
-                        <label>Username:</label>
-                        <input type="text" name="username"/><br/>
-                    </div>
-                    <div>
-                        <label>Password:</label>
-                        <input type="password" name="password"/>
-                    </div>
-                    <div>
-                        <input type="submit" value="Log In"/>
-                    </div>
-                </form>
-            </div>
-            <div class="pull-right">
+
+            <img class="introCube" src="images/cube.png" title="LexiCube" />
+            
+            <div class="introInstructions">
+            
+                <h1>Welcome to LexiCube!</h1>
+                
+                <p>LexiCube is a multiplayer 3D crossword game.</p>
+                
+                <p>Spin the cube with the arrow buttons. Click on an empty square to see its clue. Click again to switch between down and across clues.</p>
+                
+                <p>Answers turn <span class="correctWord">GREEN</span> when they are correct. Correct letters are locked and cannot be changed.</p>
+                
+                <p>Get points for completing words faster than your opponents!</p>
+            
                 <form action="/register" method="post">
-                    <h2>Register</h2>
-                    <div>
-                        <label>Username:</label>
-                        <input type="text" name="username"/><br/>
-                    </div>
-                    <div>
-                        <label>Password:</label>
-                        <input type="password" name="password"/>
-                    </div>
-                    <div>
-                        <input type="submit" value="Register"/>
-                    </div>
+                        <strong><label for="username">What's your name?</label></strong><br/>
+                        <input type="text" name="username"/>
+                        <input type="submit" value="Play!"/>
                 </form>
             </div>
         </div>
