--- a/public/stylesheets/cube.less
+++ b/public/stylesheets/cube.less
@@ -177,9 +177,10 @@ body {
 	color:black;
 	border:2px solid black;
 	font-size:16px;
-	line-height:2em;
+	line-height:34px;
 	padding-left:12px;
-	height:34px;
+	height:38px;
+	overflow-y:auto;
 }
 
 #chat-window {
