--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,6 +42,18 @@
               <button class="show-top">Show Top (5)</button>
               <button class="show-bottom">Show Bottom (6)</button>
             </section>
+            
+          <div class="audio">
+            <audio id="winSound">
+              <source src="success.ogg"></source>
+              <source src="success.mp3"></source>
+              Sounds are unavailable! Fail!
+            </audio>
+            <audio id="failSound">
+              <source src="fail.ogg"></source>
+              <source src="fail.mp3"></source>
+            </audio>
+          </div>
         
 
         <div id="chat-window">
