--- a/public/stylesheets/cube.less
+++ b/public/stylesheets/cube.less
@@ -262,6 +262,7 @@ body {
 			text-transform:uppercase;
 			&.black {background-color:black;}
 			&.selected {background-color:#bbe; }
+			&.selectedByOther {background-color:#cc3333; }
 
 			.unselectable;
 			cursor:pointer;
