--- a/public/stylesheets/cube.less
+++ b/public/stylesheets/cube.less
@@ -261,8 +261,7 @@ body {
 			text-align:center;
 			text-transform:uppercase;
 			&.black {background-color:black;}
-			&.selected {background-color:#bbe; }
-			&.selectedByOther {background-color:#cc3333; }
+			&.selected {border-color:#444; }
 
 			.unselectable;
 			cursor:pointer;
