--- a/public/stylesheets/cube.less
+++ b/public/stylesheets/cube.less
@@ -201,6 +201,10 @@ body {
 		overflow-y:auto;
 		overflow-x:hidden;
 		height:140px;
+
+		#users div {
+			padding: 2px 8px;
+		}
 	}
 	#conversation {
 		float:left;
