--- a/views/login.ejs
+++ b/views/login.ejs
@@ -24,7 +24,7 @@
                 
                 <p>Answers turn <span class="correctWord">GREEN</span> when they are correct. Correct letters are locked and cannot be changed.</p>
                 
-                <p>Get points for completing words faster than your opponents!</p>
+                <p>Get points for completing words faster than your opponents! Longer words get you more points!</p>
             
                 <form action="/register" method="post">
                         <strong><label for="username">What's your name?</label></strong><br/>
