--- a/views/index.ejs
+++ b/views/index.ejs
@@ -68,6 +68,8 @@
 				</div>
         </div>
         </div>
+        
+        <div id="userStyles"></div>
 
         <script src="http://code.jquery.com/jquery.min.js"></script>
         <script src="scripts/cube.js"></script>
