--- a/public/stylesheets/cube.css
+++ b/public/stylesheets/cube.css
@@ -99,7 +99,7 @@
 body {
   background: url(../images/bg.png) #09abda;
   margin: 0;
-  padding: 25px;
+  padding: 8px 25px;
   font: 14px Helvetica, Arial, sans-serif;
   min-width: 1280px;
 }
@@ -149,7 +149,7 @@ body {
 #wrapper {
   width: 1000px;
   height: 700px;
-  margin: 20px auto;
+  margin: 10px auto;
   position: relative;
 }
 #wrapper #faceInfo {
