--- a/public/stylesheets/cube.less
+++ b/public/stylesheets/cube.less
@@ -53,7 +53,7 @@
 body {
 	background: url(../images/bg.png) #09ABDA;
 	margin:0;
-	padding:25px;
+	padding: 8px 25px;
 	font: 14px Helvetica, Arial, sans-serif;
 	min-width:1280px;
 }
@@ -101,7 +101,7 @@ body {
 #wrapper {
 	width: 1000px;
 	height:700px;
-	margin: 20px auto;
+	margin: 10px auto;
 	position:relative;
 
 	#faceInfo {
